Fix white space on right side of modal.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -182,6 +182,7 @@ body.active {
 }
 
 .modal {
+  padding-right: 0 !important;
   .modal-dialog {
     margin-top: 0;
     margin-bottom:0;
